traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:19: error: expected class or object definition
def avancer(){
^TraversalZigZag:31: error: Unmatched closing brace '}' ignored here
     } 
     ^